tests/bad-ctor-02/out.txt
error: mismatched types: expected a constructor type, found int -> d
  ┌─ err.sml:5:5
  │
5 │   | B => 2
  │     ^

typechecking failed
